kubernetes/06-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: easyshop
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
    - port: 9216
      targetPort: 9216
      name: metrics
  selector:
    app: mongodb
