kubernetes/13-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-redis
  namespace: easyshop
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
    - port: 9121
      targetPort: 9121
      name: metrics
  selector:
    app: redis
